[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/press.png" type="Texture" id=1]
[ext_resource path="res://World/Interactive/Press.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[node name="Press" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
offset = Vector2( -4, -2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2147483664
collision_mask = 2147483650

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -4, 0, -2, -2, 2, -2, 4, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
